Testing fix for Coding Info no response click on mobile menu

--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,3 +1,14 @@
+/*Anja Added*/
+
+.avoid-clicks {
+  pointer-events: none;
+}
+
+
+
+
+
+
 /************************************************************************************
 MAX-WIDTH 767
 *************************************************************************************/
